euphony-dsp/src/osc/snapshots/euphony_dsp__osc__noise__Brown.snap
---
source: euphony-dsp/src/osc/noise.rs
expression: node
---
Node {
    name: "Brown",
    module: [
        "osc",
        "noise",
    ],
    impl_path: "euphony_dsp::osc::noise",
    id: 113,
    inputs: [
        Input {
            name: "seed",
            id: 0,
            trigger: true,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Brown noise generator.\n",
    fork: None,
}
