euphony-dsp/src/osc/snapshots/euphony_dsp__osc__noise__Mls.snap
---
source: euphony-dsp/src/osc/noise.rs
expression: node
---
Node {
    name: "Mls",
    module: [
        "osc",
        "noise",
    ],
    impl_path: "euphony_dsp::osc::noise",
    id: 111,
    inputs: [
        Input {
            name: "seed",
            id: 0,
            trigger: true,
            default: 0.0,
        },
        Input {
            name: "length",
            id: 1,
            trigger: true,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Maximum Length Sequence noise generator from an `n`-bit sequence.\n",
    fork: None,
}
