euphony-dsp/src/osc/snapshots/euphony_dsp__osc__noise__Pink.snap
---
source: euphony-dsp/src/osc/noise.rs
expression: node
---
Node {
    name: "Pink",
    module: [
        "osc",
        "noise",
    ],
    impl_path: "euphony_dsp::osc::noise",
    id: 112,
    inputs: [
        Input {
            name: "seed",
            id: 0,
            trigger: true,
            default: 0.0,
        },
    ],
    docs: " Pink noise generator.\n",
}
